# woo-tftpd

./: CMakeLists.txt  README.md  common.h  gendeb.sh  install.sh
package/DEBIAN/: control  copyright  postinst
package/etc/: woo-tftpd.conf
package/etc/X11/xinit/xinitrc.d/: woo-tftpd-gui
package/etc/woo-tftpd/.config/autostart/: woo-tftpd-gui.desktop
package/etc/xinetd.d/: woo-tftpd-server
woo-tftpd-gui/: CMakeLists.txt  application.cxx  application.hpp  data.cxx  data.hpp  main.cxx  operation_view.cxx  operation_view.hpp  widget.cxx  widget.hpp
woo-tftpd-gui/rsc/: list.qrc
woo-tftpd-server/: .gitignore  CMakeLists.txt  aconfig.h  data.c  data.h  version.h
woo-tftpd-server/tftpd/: tftpd.c
